<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="495dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/temptxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:text="@string/temperature"
                android:textSize="35dp" />

            <WebView
                android:id="@+id/graph_t"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_below="@+id/temptxt"
                android:scrollbars="none"
                tools:layout_editor_absoluteX="-1dp" />

            <TextView
                android:id="@+id/humidtxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/graph_t"
                android:layout_centerHorizontal="true"
                android:text="@string/humidity"
                android:textSize="35dp" />

            <WebView
                android:id="@+id/graph_h"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/humidtxt"
                android:scrollbars="none"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="210dp" />

            <TextView
                android:id="@+id/soiltxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/graph_h"
                android:layout_centerHorizontal="true"
                android:text="@string/soil_moisture"
                android:textSize="35dp" />

            <WebView
                android:id="@+id/graph_s"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/soiltxt"
                android:scrollbars="none"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="210dp" />

            <TextView
                android:id="@+id/lighttxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/graph_s"
                android:layout_centerHorizontal="true"
                android:text="@string/light_intensity"
                android:textSize="35dp" />

            <WebView
                android:id="@+id/graph_l"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lighttxt"
                android:scrollbars="none"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="210dp">


            </WebView>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:onClick="toLiv"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />


        </RelativeLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>
